Ff. buttons alignment fixed - Library, Generate, Save

--- a/style.css
+++ b/style.css
@@ -68,9 +68,44 @@ path, i, svg {
     top: 0;
     right: 0;
     padding: 0.5rem;
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    border: none;
+    background: rgb(75, 75, 75);
+    color: white;
+    cursor: pointer;
+    font-weight: bold;
 }
 
 .controls {
     display: flex;
     flex-direction: column;
+}
+
+.panel {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 20vh;
+}
+
+.panel button {
+    font-size: 1.2rem;
+    margin: 1rem;
+    padding: 1rem 2rem;
+    background: rgb(30, 35, 65);
+    border: none;
+    color: white;
+    cursor: pointer;
+    border-radius: 1rem;
+}
+
+.panel p {
+    font-size: 1.2rem;
+}
+
+.library-panel, .generate-panel, .save-panel {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
